--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
 
 .container {
     width: 100%;
+    height:100vh;
     max-width: 360px;
     background: #DFF2FF; 
     border-radius: 20px;
